tests/ui/type-alias/issue-62263-self-in-atb.stderr
error[E0433]: failed to resolve: `Self` is only available in impls, traits, and type definitions
  --> $DIR/issue-62263-self-in-atb.rs:5:32
   |
LL | pub type Alias = dyn Trait<A = Self::A>;
   |                                ^^^^ `Self` is only available in impls, traits, and type definitions

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0433`.
