tests/ui/type-alias/issue-62263-self-in-atb.rs
pub trait Trait {
    type A;
}

pub type Alias = dyn Trait<A = Self::A>;
//~^ ERROR failed to resolve: `Self`

fn main() {}
